# latynkatar_tests

./: README.md
python-pytest-selenium/: .envrc  .gitignore  main.py  noxfile.py  pyproject.toml
python-pytest-selenium/lib/: config.py
python-pytest-selenium/tests/: conftest.py
python-pytest-selenium/tests/tools/: test_converter.py
