[project]
name = "python-pytest-selenium"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "nox>=2025.2.9",
    "pytest>=8.3.5",
    "pytest-html>=4.1.1",
    "pytest-randomly>=3.16.0",
    "selenium>=4.31.0",
]

[tool.flake8]
max-line-length = 120

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 120

[[tool.mypy.overrides]]
module = "pytest_metadata.*"
ignore_missing_imports = true

